quon_na/src/snapshots/quon_na__naviz__tests__namachine_demo.snap
---
source: quon_na/src/naviz.rs
expression: out
---
name: "demo_machine"

movement {
	max_speed: 1
}

time {
	load: 15
	store: 15
	ry: 0.625
	rz: 0.625
	cz: 0.36
	unit: "us"
}

distance {
	interaction: 7.5
	unit: "um"
}

zone zone_storage_0 {
	from: (0, 0)
	to: (24, 24)
}

zone zone_entanglement_1 {
	from: (0, 310)
	to: (36, 320)
}

trap trap0 {
	position: (0, 0)
}
trap trap1 {
	position: (12, 0)
}
trap trap2 {
	position: (24, 0)
}
