quon_na/src/snapshots/quon_na__naviz__tests__naviz_cz.snap
---
source: quon_na/src/naviz.rs
expression: out
---
#target demo

atom (0, 0) atom0
atom (12, 0) atom1

@+ [
	cz { atom0, atom1 }
]
